syntax = "proto3";
option go_package = "./pb";
package pb;

import "google/protobuf/timestamp.proto";

message VideoInfo {
  int64 id = 1;
  string title = 2;
  int64 section_id = 3;
  string tag_ids = 4;
  int64 owner_id = 5;
  string owner_name =6;
  string play_url = 7;
  string cover_url = 8;
  int64 create_time = 9;
  int64 update_time = 10;
}

message PublishVideoReq {
  string title = 1;
  int64 section_id = 2;
  string tag_ids = 3;
  int64 owner_id = 4;
  string owner_name = 5;
  string play_url = 6;
  string cover_url = 7;
  int64 publish_time = 8;
}

// 视频相关功能
message PublishVideoResp {
}

message VideoFeedReq {
  int64 last_time_stamp = 1;
  int64 section_id = 2;
}

message VideoFeedResp {
  repeated VideoInfo videos = 1;
}

message UserVideoListReq {
  int64 user_id = 1;
  int64 page = 2;
  int64 page_size = 3;
}

message UserVideoListResp {
  int64 total = 1;
  repeated VideoInfo videos = 2;
}

message DeleteVideoReq {
  int64 user_id = 1;
  int64 video_id = 2;
}

message DeleteVideoResp {
}

message GetVideoByIdReq {
  int64 id = 1;
}

message GetVideoByIdResp {
  VideoInfo video = 1;
}

// 分区相关功能
message Section {
  int64 id = 1;
  string name = 2;
}
message AddSectionReq {
  string name = 1;
}

message AddSectionResp {
}

message DelSectionReq {
  int64 id = 1;
}

message DelSectionResp {
}

message GetSectionByIdReq {
  int64 id = 1;
}

message GetSectionByIdResp {
  Section section = 1;
}

message GetAllSectionReq {
}

message GetAllSectionResp {
  repeated Section sections = 1;
}

// 标签相关功能
message Tag {
  int64 id = 1;
  string name = 2;
}

message AddTagReq {
  string name = 1;
}

message AddTagResp {
}

message DelTagReq {
  int64 id = 1;
}

message DelTagResp {
}

message GetTagByIdReq {
  int64 id = 1;
}

message GetTagByIdResp {
  Tag tag = 1;
}

message GetAllTagReq {
}

message GetAllTagResp {
  repeated Tag tags = 1;
}

service video {
    // 视频相关功能
    rpc PublishVideo (PublishVideoReq) returns (PublishVideoResp);
    rpc VideoFeed (VideoFeedReq) returns (VideoFeedResp);
    rpc UserVideoList (UserVideoListReq) returns (UserVideoListResp);
    rpc DeleteVideo (DeleteVideoReq) returns (DeleteVideoResp);
    rpc GetVideoById (GetVideoByIdReq) returns (GetVideoByIdResp);
    // 分区相关功能
    rpc AddSection (AddSectionReq) returns (AddSectionResp);
    rpc DelSection (DelSectionReq) returns (DelSectionResp);
    rpc GetSectionById (GetSectionByIdReq) returns (GetSectionByIdResp);
    rpc GetAllSection (GetAllSectionReq) returns (GetAllSectionResp);
    // 标签相关功能
    rpc AddTag (AddTagReq) returns (AddTagResp);
    rpc DelTag (DelTagReq) returns (DelTagResp);
    rpc GetTagById (GetTagByIdReq) returns (GetTagByIdResp);
    rpc GetAllTag (GetAllTagReq) returns (GetAllTagResp);
}